# librevoice-gui-desktop-application

./: CMakeLists.txt  dev_setup.sh
application/: AboutPage.qml  CMakeLists.txt  HintsDelegate.qml  HintsPage.qml  Idler.qml  RemoteStt.qml  SettingsPage.qml  librevoice-gui-app.desktop  main.cpp  main.qml
icons/: CMakeLists.txt
